Corrections to end of chapter 4.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -634,7 +634,7 @@ The maximum inaccuracies were recorded when walking along the South wall of the 
 \label{vtw_alll_routes_first_half.png}
 \end{figure}
 
-When analyzing the sub-track in the vicinity of the nave (see figure \ref{vtw_all_routes_second_half.png}) it can be seen that although the MAX-6 outperformed the smartphone in terms of Hausdorff distance this relationship is misleading as the smartphone track corresponded more closely in shape to the planned route even if it did stray further from it at its extreme. The discrepancy in the behavior of the two receivers in this situation is attributed to different implementations of dead-reckoning functionality between the receivers. Dead-reckoning is the process used when the GPS receiver loses reception of location data from satellites and extrapolates its position based upon a combination of the last received position data and the velocity of travel at the time of receiving these data (defined for the MAX-6 by the Dynamic Platform Model chosen, as detailed in appendix \ref{appendix-vtw-hardware}.
+When analyzing the sub-track in the vicinity of the nave (see figure \ref{vtw_all_routes_second_half.png}) it can be seen that although the MAX-6 outperformed the smartphone in terms of Hausdorff distance this relationship is misleading as the smartphone track corresponded more closely in shape to the planned route even if it did stray further from it at its extreme. The discrepancy in the behavior of the two receivers in this situation is attributed to different implementations of dead-reckoning functionality between the receivers. Dead-reckoning is the process used when the GPS receiver loses reception of location data from satellites and extrapolates its position based upon a combination of the last received position data and the velocity of travel at the time of receiving these data (defined for the MAX-6 by the Dynamic Platform Model chosen, as detailed in appendix \ref{appendix-vtw-hardware}).
 
 In addition to the accuracy of the position tracking it is also important to consider the frequency and granularity of these data. Even if the position data used by a freeform explorative parallel reality system were extremely accurate, the experience of using that platform would be poor if these data were reported too infrequently, as it would either lead to `jumpy' movement where the virtual view had to move a substantial distance to match each newly reported real position, or a reliance upon dead-reckoning to predict the user's movement between subsequent data. Likewise even with accurate and frequently reported position data, if the granularity of these data is not especially fine then the experience of using the platform will be negatively impacted by an inability to make small real movements and see them reflected as similarly small virtual movements when trying to pay attention to specific aspects of the environments.
 
@@ -645,9 +645,9 @@ In addition to the accuracy of the position tracking it is also important to con
 \label{vtw_all_routes_second_half.png}
 \end{figure}
 
-Throughout the test route the HTC One S only reported 27 positions. This would have resulted in extremely large virtual movements if used for VTW and the low granularity of these positions (as seen in figure \ref{vtwpositiondeltas.png}) would have meant that the user would've found it frustratingly difficult to match real world movements to virtual world equivalents in any sort of freeform exploration scenario. The MAX-6 performed substantially better in these regards, reporting 251 positions along the same route and with substantially higher granularity (also shown in figure \ref{vtwpositiondeltas.png}).
+Throughout the test route the HTC One S only reported 27 positions. This would have resulted in extremely large virtual movements if used for VTW and the low granularity of these positions (as seen in figure \ref{vtwpositiondeltas.png}) would mean that the user would've found it frustratingly difficult to match real world movements to virtual world equivalents in any sort of freeform exploration scenario. The MAX-6 performed substantially better in these regards, reporting 251 positions along the same route and with substantially higher granularity (also shown in figure \ref{vtwpositiondeltas.png}).
 
-However when the MAX-6 readings were integrated into the VTW platform and it was tested in its complete form at the cathedral, even though subsequent positions reported by the MAX-6 were usually no more than 1-3m away, they did not `settle' and keep the virtual view in the same position when standing still. Instead new readings in this 1-3m range would continue to be reported and the virtual view would continue to move even while the user was standing stationary in the real world. Adjusting the high pass filter on incoming position data to remedy this situation led to a worse experience when moving, as virtual position would only update in jumps of multiples of the high pass value.
+However when the MAX-6 readings were integrated into the VTW platform and it was tested in its complete form at the cathedral, even though subsequent positions reported by the MAX-6 were usually no more than 1-3m away, they did not `settle' and keep the virtual view in the same position when standing still. Instead new readings in this 1-3m range would continue to be reported and the virtual view would continue to move even while the user was standing stationary in the real world. Adjusting the high pass filter on incoming position data to remedy this situation led to a worse experience when moving, as the virtual position would only update in jumps of multiples of the high pass value.
 
 \begin{figure}[h]
 \centering
@@ -664,9 +664,9 @@ However when the MAX-6 readings were integrated into the VTW platform and it was
 
 \subsection{Orientation Control and Graphical Performance}
 
-The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. This shortcoming is something that has already been addressed since VTW's development, by the introduction of commodity orientation sensors that sample at much higher rates and which have already begun to find their way into the realm of midrange smartphones and tablets.
+The accuracy of the camera control during testing was sufficient, however the speed at which the camera orientation moved to match physical orientation was rather slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings were combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. This hardware shortcoming is something that has already been addressed since VTW's development, by the introduction of commodity orientation sensors that sample at much higher rates and which have already begun to find their way into the realm of midrange smartphones and tablets.
 
-VTW averaged framerates between 20 and 25 frames per second (fps) with the modified Second Life client's quality option set to the `Low' position during testing at the cathedral site. Figure \ref{vtw-framerates.png} shows average framerates of the client's different quality options when standing at two different positions within the cathedral site; one `indoor' position from the centre of the nave and one `outdoor' position from the grassy area surrounded by the cloisters. The framerates for the indoor position were lower than those for the outdoor position as the virtual cathedral model features substantially more detail indoors than outdoors, due to the number of furnishings, tapestries, etc. that originally filled the building and which have been faithfully reconstructed in the virtual model.
+during testing at the cathedral site VTW averaged framerates between 20 and 25 frames per second (fps) with the modified Second Life client's quality option set to the `Low' position. Figure \ref{vtw-framerates.png} shows average framerates of the client's different quality options when standing at two different positions within the cathedral site; one `indoor' position from the centre of the nave and one `outdoor' position from the grassy area surrounded by the cloisters. The framerates for the indoor position were lower than those for the outdoor position as the virtual cathedral model features substantially more detail indoors than outdoors, due to the number of furnishings, tapestries, etc. that originally filled the building and which have been faithfully reconstructed in the virtual model.
 
 \begin{figure}[h]
 	\centering
@@ -677,12 +677,12 @@ VTW averaged framerates between 20 and 25 frames per second (fps) with the modif
 
 The 20 to 25 fps that the VTW platform was able to achieve with the Second Life client's quality set to `Low' provided the best experience during testing. Whilst increasing the quality setting resulted in higher graphical quality and level of detail, the accompanying reduction in frame rate led to a worsened overall experience. The style of explorative interaction with virtual content that the VTW platform employs is more resilient to lower frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including first person shooters~\cite{Claypool2006}, but overall user experience would nonetheless have been improved by a higher frame rate.
 
-It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW. Indeed, the Second Life/OpenSim software ecosystem is an inherently desktop environment and making use of a software environment with specific support for mobile deployment, such as Unity, would have allowed for higher framerates while matching or surpassing the graphical quality of the VTW platform, at the cost of a lengthy conversion process to move existing 3D assets from Second Life/OpenSim into this alternative environment. It is also worth noting that the graphical capabilities of both desktop and mobile devices are steadily increasing with every new hardware generation, with the 3D entertainment capabilities of mobile devices now representing an important factor in the buyer's decision making process.
+It should however be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and was not optimized for use on less powerful mobile platforms such as the tablet used by VTW. Indeed, the Second Life/OpenSim software ecosystem is an inherently desktop environment and instead making use of a software environment with specific support for mobile deployment, such as Unity, would have allowed for higher framerates while matching or surpassing the graphical quality of the VTW platform, at the cost of a lengthy conversion process to move existing 3D assets from Second Life/OpenSim into this alternative environment. It is also worth noting that the graphical capabilities of both desktop and mobile devices are steadily increasing with every new hardware generation, with the 3D entertainment capabilities of mobile devices now representing an important factor in the buyer's decision making process.
 
 %=========================================================================================================
 
 \subsection{Performance Implications}
-When considering the implications of the position control performance and examining the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage}, it is important to remember that this figure represents the worst case scenario and is not necessarily a good indication of average performance. This value, analogous to $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, represents a constraint on the granularity of the content; it is the minimum distance required between any two points to guarantee that they are correctly differentiated between, however it does not mean that two points separated by less than this distance will \textit{never} be correctly differentiated between.
+When considering the implications of the position control performance and examining the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage}, it is important to remember that this figure represents the worst case scenario and is not necessarily a good indication of average performance. This value, analogous to $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, nonetheless represents a constraint on the granularity of the content; it is the minimum distance required between any two points to guarantee that they are correctly differentiated between, however it does not mean that two points separated by less than this distance will \textit{never} be correctly differentiated between.
 
 Considering the first scenario of static viewpoints this level of positional accuracy is sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
 
@@ -725,7 +725,7 @@ Both with previous sitsim projects and VTW the user's view is arguably always a 
 \subsection{Influence of VTW}
 \label{influence-factors-vtw-chapter}
 
-Table \ref{influence-factors-vtw-table} lists the principle factors raised throughout the experience of designing, developing and evaluating the VTW platform, which influenced the subsequent creation of the Mirrorshades parallel reality platform (chapter \ref{chapter-mirrorshades}).
+Table \ref{influence-factors-vtw-table} lists the principle factors observed throughout the evaluation of the VTW platform that were used to influence the subsequent creation of the Mirrorshades parallel reality platform (chapter \ref{chapter-mirrorshades}).
 
 \begin{table}[h]
 \begin{center}
