--- a/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
+++ b/05_mirrorshades_design_implementation/mirrorshades_design_implementation.tex
@@ -9,7 +9,7 @@
 
 \label{chapter-mirrorshades}
 
-This chapter discusses the design and development of a parallel reality platform called Mirrorshades that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS), using the Unity game engine. This platform allows its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform built upon VTW and enabled investigation of parallel reality in a manner that fully realised the envisioned experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
+This chapter discusses the design and development of a parallel reality platform called Mirrorshades\footnote{\textbf{Mirrorshades: The Cyberpunk Anthology} (1986) is a defining cyberpunk short story collection edited by Bruce Sterling, who explains how mirrored sunglasses became a literary badge or `totem' for the cyberpunk movement whose fiction has frequently involved immersive multi-user virtual environments and HMDs.} that combined a wide field of view (FOV), stereoscopic 3D, VR HMD modified with cameras for video see-through, with an indoor positioning system (IPS), using the Unity game engine. This platform allowed its user to observe and move around their real environment while imbued with the ability to alternatively view a complete immersive VR environment from the equivalent vantage point. Development of this platform built upon VTW and enabled investigation of parallel reality in a manner that fully realised the envisioned experiential aspect of wholly switching between immersive real and virtual environments. The use of higher performance position and orientation tracking promised to allow for the freeform exploration scenario from section \ref{parallel-reality-in-virtual-heritage} to take place at closer ranges in smaller, indoor spaces and with sufficient accuracy to even experience aspects of the third detailed comparison scenario.
 
 %Previous XR research approached the vacancy problem by integrating sensor/actuator networks into the environments, such that actions in one could manifest in the other, however direct visual engagement with the virtual environment was only possible from static interfaces at pre-determined locations within the real environment~\cite{Lifton2007a, Dublon2011}. The platform discussed in this document addresses this shortcoming by providing a mobile interface for visual engagement with both environments of a XR system, allowing the user to transition between viewing their real environment and a virtual environment at any time while maintaining the freedom to move around them, multiplexing visual stimuli from their real surroundings and from a parallel, virtual `mirror world'~\cite{Gelernter1993}.
 
@@ -24,7 +24,7 @@ This chapter discusses the design and development of a parallel reality platform
 %With a display technology such as an immersive VR HMD however, 
 
 \section{Overview}
-The development of the VTW platform as a preliminary foray into applying the concept of parallel reality to the field of cultural heritage and investigating the suitability of a familiar modality of alternate reality for  this purpose performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage}, wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly explore the freeform exploration scenario for expansive outdoor cultural heritage sites, in which visitors view artefacts within the environments from some distance from where the inaccuracy of positioning is not apparent. However the performance and the experiential aspect of the platform left much room for improvement.
+The development of the VTW platform as a preliminary foray into applying the concept of parallel reality to the field of cultural heritage and investigating the suitability of a familiar modality of alternate reality for  this purpose performed sufficiently to implement the static viewpoint scenario described in section \ref{parallel-reality-in-virtual-heritage}, wherein the viewpoints are spaced further apart than the worst case accuracy of the GPS solution, and to partly explore the freeform exploration scenario for expansive outdoor cultural heritage sites, in which visitors view artefacts within the environments from some distance from where the inaccuracy of positioning is not apparent. However along with the inability of the platform to fully realise the second scenario or to achieve any aspect of the third scenario, the performance and the experiential aspect of the platform also left much room for improvement.
 
 Using cultural heritage as a real world case study once more, the Mirrorshades platform described in this chapter addressed these shortcomings as outlined in table \ref{influence-factors-mirrorshades-table}, which can be referenced against table \ref{influence-factors-vtw-table} from the previous chapter (section \ref{influence-factors-vtw-chapter}).
 
@@ -46,13 +46,13 @@ Framerate & Is higher, through the use of substantially more powerful hardware (
 
 %=========================================================================================================
 
-Position Control & Is more accurate and is suitable for indoor uses, through adoption of IndoorAtlas technology. \\
+Position Control & Is more accurate and is suitable for indoor use, through adoption of IndoorAtlas technology. \\
 
 \midrule
 
 %=========================================================================================================
 
-Orientation Control & Is faster and more responsive, through use of the 1kHz tracker in the Oculus Rift DK1. \\
+Orientation Control & Is faster and more responsive, through use of the 1kHz tracker in the HMD. \\
 
 \midrule
 
@@ -68,20 +68,20 @@ User Experience & Fully realises the vision of switching wholly between environm
 \label{influence-factors-mirrorshades-table}
 \end{table}
 
-Identifying a suitable indoor cultural heritage site for testing the platform allowed the use of an IPS to track the user's position, which promised greater accuracy than even SBAS enhanced GPS did outdoors. This allowed for the full freeform exploration scenario to be explored, even in much less expansive sites, and even for aspects of the third scenario with detailed comparison to be experienced. The use of a HMD capable of producing stereoscopic 3D visuals that completely fill the user's view, in place of a tablet, allowed the investigation of parallel reality to extend to systems that present a completely immersive virtual experience instead of a `window' into the virtual, realising the true essence of the envisioned experiential aspect of parallel reality that VTW did not provide. Whilst VTW presented the user with a `screen' into the virtual, around which the user could still perceive their real environment, with the HMD of this subsequent platform \textit{``there is practically no screen''} as it \textit{``totally covered by our field of view, vanishes''}~\cite{Tzortzaki2002}.
+Identifying a suitable indoor cultural heritage site for testing the platform allowed the use of an IPS to track the user's position, which promised greater accuracy than even SBAS enhanced GPS did outdoors. This allowed for the freeform exploration scenario to be explored fully, even in much less expansive sites, and even for aspects of the third scenario with detailed comparison to be experienced. The use of a HMD capable of producing stereoscopic 3D visuals that completely fill the user's view, in place of a tablet, allowed the investigation of parallel reality to extend to systems that present a completely immersive virtual experience instead of a `window' into the virtual, realising the true essence of the envisioned experiential aspect of parallel reality that VTW did not provide. Whilst VTW presented the user with a `screen' into the virtual, around which the user could still perceive their real environment, with the HMD of this subsequent platform \textit{``there is practically no screen''} as it \textit{``totally covered by our field of view, vanishes''}~\cite{Tzortzaki2002}.
 
-The 1kHz head tracking built into the HMD greatly improved the accuracy and responsiveness of orientation tracking compared to VTW, while the use of a small but powerful laptop computer in combination with the highly optimized Unity game engine to render the visuals presented via the HMD resulted in not just higher framerates but also a higher level of detail.
+The low-drift 1kHz head tracking built into the HMD greatly improved the accuracy and responsiveness of orientation tracking compared to VTW, while the use of a small but powerful laptop computer in combination with the highly optimized Unity game engine to render the visuals presented via the HMD resulted in not just higher framerates but also a higher level of detail.
 
 %=========================================================================================================
 
 \section{The Mirrorshades Platform}
 \label{the-mirrorshades-platform}
-Figure \ref{systemarchitecture} presents a high level architectural overview of the Mirrorshades\footnote{\textbf{Mirrorshades: The Cyberpunk Anthology} (1986) is a defining cyberpunk short story collection edited by Bruce Sterling, who explains how mirrored sunglasses became a literary badge or `totem' for the cyberpunk movement whose fiction has frequently involved immersive multi-user virtual environments and HMDs.} parallel reality platform while figure \ref{participant-f-5.jpg} shows its implementation. Mirrorshades allows its user to observe and move around their real environment (RW) whilst wearing a stereoscopic 3D HMD, with their position and gaze tracked by an IPS and the HMD's head tracker, freely switching between viewing RW visual stimuli provided by cameras mounted to the HMD and immersive VR visual stimuli from the equivalent vantage point into a virtual environment as tracked by the IPS. A controller held by the user is used to control these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD is carried about the person in a bag/satchel.
+Figure \ref{systemarchitecture} presents a high level architectural overview of the Mirrorshades parallel reality platform while figure \ref{participant-f-5.jpg} shows its implementation. Mirrorshades allows its user to observe and move around their real environment (RW) whilst wearing a stereoscopic 3D HMD, with their position and gaze tracked by an IPS and the HMD's head tracker, freely switching between viewing RW visual stimuli provided by cameras mounted to the HMD and immersive VR visual stimuli from the equivalent vantage point into a virtual environment as tracked by the IPS. A controller held by the user is used to control these switches between RW and VR. The mobile client that produces the graphical content delivered to the HMD is carried about the person in a bag/satchel.
 
 \begin{figure}[h]
 	\begin{center}
 		\includegraphics[width=.5\linewidth]{system-architecture.png}
-		\caption{High level overview of the Mirrorshades parallel reality platform in use.}
+		\caption{High level overview of the Mirrorshades parallel reality platform.}
 		\label{systemarchitecture}
 	\end{center}
 \end{figure}
@@ -94,13 +94,13 @@ Figure \ref{systemarchitecture} presents a high level architectural overview of 
 	\end{center}
 \end{figure}
 
-Emphasis should be placed on the fact that the two views, RW and VR, through the function of the IPS and head tracking combined with the spatial equivalence of the constituent environments, represent equivalent vantage points within the two environments, differentiating the modality of interaction from the visual perception exchange systems exhibited in an Istanbul church by Mathieu Briand, which at first glance might have seemed to provide a similar modality at least in terms of the hardware employed and the use of a heritage scenario.
+Emphasis should be placed on the fact that the two views, RW and VR, through the function of the IPS and head tracking combined with the spatial equivalence of the constituent environments, represent equivalent vantage points within the two environments, differentiating the modality of interaction from the visual perception exchange systems exhibited in an Istanbul church by Mathieu Briand, which at first glance might have seemed to provide a similar modality in terms of the hardware employed and the use of a heritage scenario.
 
 \begin{quote}
 	\textit{``In an earlier version, set in the Hagia Eirene church in Istanbul, visitors wearing a wireless headgear viewing device could press a button to exchange the image on the screen with that of another of the six headgear cameras, revealing whatever it was pointing at. Visitors were fascinated by the dynamic visual transformations, such as the way the brightly painted floor could suddenly be replaced by the church dome as they wandered around the space.''}~\cite{Jones2006}
 \end{quote}
 
-Likewise the modality of interaction provided by the Mirrorshades platform distances itself from that of Briand's later experiments into `controlled schizophrenia' in which displacement of body and vision were intentional, as the different views that a user of the Mirrorshades platform switches between are inherently the same `place' as seen from the same vantage point.
+Likewise the modality of interaction provided by the Mirrorshades platform distances itself from that of Briand's later experiments into `controlled schizophrenia' in which displacement of body and vision were intentional, as the different views that a user of the Mirrorshades platform switches between are inherently the same `place' as seen from the equivalent vantage point.
 
 \begin{quote}
 	\textit{``The audience members wear helmets that incorporate a camera, goggle-style compact monitor, and headphones. The audience members may also carry a connector that can be plugged and unplugged from the nine sockets placed around the museum, in order to exchange audiovisual experiences with others.}
@@ -113,7 +113,7 @@ Likewise the modality of interaction provided by the Mirrorshades platform dista
 \subsection{St Salvator's Chapel}
 \label{chapel-intro}
 
-The cultural heritage site in mind when developing the Mirrorshades platform was St Salvator's chapel in St Andrews. Founded in 1450 but internally stripped of its medieval fittings during the Protestant Reformation (1517 - 1648) the chapel looks markedly different today than it did upon its completion. An existing virtual reconstruction of the chapel as it stood in the period 1450-1460, created by the OVW group, and the marked differences between the internal appearance of the reconstruction and the present day building (including the replacement of the original stone roof with a wooden one and drastically different dividing of the internal space) made the chapel an ideal candidate within the context of cultural heritage for the Mirrorshades parallel reality system to be deployed. The magnitude of the changes between the chapel's original state and how it stands today means that augmented reality would not in fact be able to present a faithful image of how the chapel originally looked, but would need to be combined with substantial application of diminished reality to remove present day features that were not there in the past. For example, when in proximity to the rood screen in its new position (discussed beneath), removing it would require replacing almost the entire viewport with augmented and diminished visuals.
+The cultural heritage site in mind when developing the Mirrorshades platform was St Salvator's chapel in St Andrews. Founded in 1450 but internally stripped of its medieval fittings during the Protestant Reformation (1517 - 1648) the chapel looks markedly different today than it did upon its completion. An existing virtual reconstruction of the chapel as it stood in the period 1450-1460, created by the OVW group, and the marked differences between the internal appearance of the reconstruction and the present day building (including the replacement of the original stone roof with a wooden one and drastically different dividing of the internal space) made the chapel an ideal candidate within the context of cultural heritage for the Mirrorshades parallel reality system to be deployed. The magnitude of the changes between the chapel's original state and how it stands today means that augmented reality would not in fact be able to present a faithful image of how the chapel originally looked, but would need to be combined with substantial application of diminished reality to remove present day features that were not there in the past. For example, when in proximity to the rood screen in its new position (discussed beneath), removing it would require replacing almost the entire viewport with computer generated augmented and diminished visuals.
 
 \TwoFig{sallies-vrst/sallies-quad-real.jpg}{St Salvator's chapel today.}{sallies-quad-real.jpg}
        {sallies-vrst/sallies-quad-virtual.png}{St Salvator's chapel reconstruction.}{sallies-quad-virtual.png}
@@ -284,7 +284,7 @@ The C310 cameras received the same attention as the PS3 Eye cameras: they were d
 
 \subsection{Switchable Stereoscopic Video See-Through with Unity}
 
-Unity's \texttt{WebCamTexture} support was used to gain access to the C310 video streams within Unity: due to better provisioned drivers there was no issue with Unity obtaining references to both C310 cameras as there was with the two PS3 Eye cameras. These video streams are applied to a pair of planes, of matching orientation and aspect ratio to the video stream, that are situated perpendicular to the two virtual camera objects of the Oculus Unity prefab. This is shown by figure \ref{unity-screenshot-1.png} in which the smaller portrait planes in the centre of the image are those onto which the camera streams are rendered.
+Unity's \texttt{WebCamTexture} support was used to gain access to the C310 video streams within Unity: due to better provisioned drivers there was no issue with Unity obtaining references to both C310 cameras as there was with the two PS3 Eye cameras. These video streams are applied to a pair of planes, of matching orientation and aspect ratio to the video stream, that are situated perpendicular to the two virtual camera objects of the Oculus Unity SDK prefab. This is shown by figure \ref{unity-screenshot-1.png} in which the smaller portrait planes in the centre of the image are those onto which the camera streams are rendered.
 
 \begin{figure}[h]
     \begin{center}
@@ -400,7 +400,7 @@ In addition to video frames still photographs taken at the same 1/4000 of a seco
 
 Whilst the FOV of the image produced by the C310 is sufficient to fill the area of the DK1's screen visible when relief is extended to its furthest position, there are other aspects of the camera solution in addition to the latency that needed consideration, including the depth of field (DoF) of the images and their fixed convergence.
 
-Due to the fact that depth of field of an image captured by a camera system increases both as lens focal length and sensor size decrease, the combination of a short focal length lens (such as the 2.1mm used in the DK1 solution) with a small sensor (such as the 1/4'' type used in the DK1 solution) results in a very large depth of field. The hyperfocal distance~\cite{Kingslake1992} of the DK1 solution is close enough to the user that the images have acceptable sharpness from roughly arm's length to infinity. It is only upon looking at something closer than this, such as paying close attention to a handheld controller, that the image loses acceptable sharpness, so the requirement for such interaction would need to be avoided where possible.
+Due to the fact that depth of field of an image captured by a camera system increases both as lens focal length and sensor size decrease, the combination of a short focal length lens (such as the 2.1mm used in the DK1 solution) with a small sensor (such as the 1/4'' type used in the DK1 solution) results in a very large depth of field. The hyperfocal distance~\cite{Kingslake1992} of the DK1 camera solution is close enough to the user that the images have acceptable sharpness from roughly arm's length to infinity. It is only upon looking at something closer than this, such as paying close attention to a handheld controller, that the image loses acceptable sharpness, so the requirement for such interaction would need to be avoided where possible.
 
 With regards to convergence, when viewing an object in the real world the eyes rotate such that the perpendicular axes that bisect each eye converge at the point that one is looking at. This results in disparity between the images produced by each eye, as each sees the object from a different angle due to the physical distance between the eyes. This disparity leads to stereopsis, which is one of the contributing factors that leads to our ability to perceive depth. Oculus exploit this situation with their HMDs, by presenting a slightly different image to each eye, allowing virtual objects to appear at varying distances behind or in front of the virtual display.
 
@@ -435,7 +435,7 @@ As mentioned in section \ref{caseforpr} the registration between real and virtua
 
 This lessened requirement for accurate registration allows the Mirrorshades platform to operate using just the DK1's head tracker without what Azuma refers to as \textit{``additional registration strategies''}~\cite{Azuma1997}. This tracker provides 1Khz sampling with roughly 2ms delay (from head movement to Unity receiving the data) and thanks to sensor fusion performed over data from the accelerometer, gyroscope and magnetometer, drift is reduced to negligible levels. Mitigating drift in the head tracking solution was important for Oculus as it is a requirement for any VR experience that has a fixed reference point such as \textit{``a game with a cockpit, where your head's orientation does not affect the position of whatever car/plane/mech you're piloting''}\footnote{\url{https://www.kickstarter.com/projects/1523379957/oculus-rift-step-into-the-game/posts/380099}}\saveFN\rifttrackerfn. It would result in a poor VR experience if drift was allowed to mount between a user's head orientation and this fixed reference point: \textit{``imagine re-orienting your head back to perfect center but in-game you're now looking slightly left or right''}\useFN\rifttrackerfn .
 
-In the case of Mirrorshades the fixed reference point is the chapel - both the RW and the VR chapel, as they occupy the same `place'. By making sure that the two chapels are aligned at the beginning of each session, the negligible drift in the head tracker means that sufficient registration between the two environments is maintained throughout the experience without the need to introduce any additional registration strategies. This alignment is achieved by knowing the starting orientation of the virtual cameras in the VR chapel and then physically placing the DK1 in the corresponding orientation in the RW chapel. This starting orientation in the VR chapel is shown in figure \ref{sallies-rift-frame-of-reference.png} and producing the same orientation with the DK1 is trivial as it was chosen to be parallel with the architecture of the building (including the floor tiles, which proved to be a useful grid to accurately align the DK1 against).
+In the case of Mirrorshades the fixed reference point is the chapel - both the RW and the VR chapel, as they represent the same `place'. By making sure that the two chapels are aligned at the beginning of each session, the negligible drift in the head tracker means that sufficient registration between the two environments is maintained throughout the experience without the need to introduce any additional registration strategies. This alignment is achieved by knowing the starting orientation of the virtual cameras in the VR chapel and then physically placing the DK1 in the corresponding orientation in the RW chapel. This starting orientation in the VR chapel is shown in figure \ref{sallies-rift-frame-of-reference.png} and producing the same orientation with the DK1 is trivial as it was chosen to be parallel with the architecture of the building (including the floor tiles, which proved to be a useful grid to accurately align the DK1 against).
 
 \begin{figure}
 	\begin{center}
@@ -478,7 +478,7 @@ Cost represented a more concrete restriction for Mirrorshades, as the costs of i
 
 Reliance upon deployed infrastructure such as beacons and markers also needed to be avoided for a parallel reality platforms within virtual heritage, as most cultural heritage sites would not take kindly to the installation of any such infrastructure into the site/environment, or may only have allowed strictly temporary infrastructure to be deployed. Approaches that required extensive infrastructure to be deployed, or for which the deployment and calibration phase of infrastructure is time consuming, were therefore unsuitable. Similarly, intrusiveness of the IPS used for parallel reality platforms in virtual heritage needed to be considered such that the IPS did not too negatively affect the user's experience of the real and virtual sites around them, in a situation where immersion is a primary goal.
 
-Robustness of all aspects of a virtual heritage system are critical for enjoyment and beneficial experience by the user. Visitors to a cultural heritage site, especially if they are only visiting for a short period of time, are not pliant to waiting for a malfunctioning virtual heritage system to right itself. Furthermore, many virtual heritage systems are installed by experts into locations where the permanent on-site staff do not have the technical knowledge or experience to troubleshoot and repair them, so these systems must be robust enough to continue successful operation for extended periods of time without intervention and maintenance by knowledgeable support staff.
+Robustness of all aspects of a virtual heritage system are critical for enjoyment and beneficial experience by the user. Visitors to a cultural heritage site, especially if they are only visiting for a short period of time, are not pliant to waiting for a malfunctioning virtual heritage system to right itself. Furthermore, many virtual heritage systems are installed by experts into locations where the permanent on-site staff (if there are any) do not have the technical knowledge or experience to troubleshoot and repair them, so these systems must be robust enough to continue successful operation for extended periods of time without intervention and maintenance by knowledgeable support staff.
 
 %http://www.memsic.com/wireless-sensor-networks/MCS-KIT410CA
 %8x Crickets
@@ -529,7 +529,7 @@ Initial testing of IndoorAtlas at St Salvator's chapel proved surprisingly succe
 \TwoFig{sallies-splodges-red.png}{Positions reported during preliminary testing of IndoorAtlas at St Salvator's chapel.}{sallies-splodges-red.png}
        {sallies-indoor-atlas-routes.png}{Routes mapped in St Salvator's chapel during offline mapping phase.}{sallies-indoor-atlas-routes.png}
 
-Upon closer inspection of the chapel, metal gratings set into the floor and which run along the central aisle, representing much of the horizontal movement in figure \ref{sallies-splodges-red.png} and shown in figure \ref{DSCN0172.jpg} and figure \ref{DSCN0174.jpg} in detail, may explain this unexpectedly high performance. These gratings also extend to the open area in front of the altar as shown in figure \ref{DSCN0175.jpg}, however in other areas such as when walking to either side of the altar (far right of figures \ref{sallies-splodges-red.png} and \ref{sallies-indoor-atlas-routes.png}) there were no such obvious sources of magnetic interference (see figure \ref{DSCN0176.jpg}) to account for the maintained accuracy. Less obvious explanations could be possible ferromagnetic properties of the stone used in the building's construction and the presence of electrical lighting and audio systems (loudspeaker and light fixture visible in figure \ref{DSCN0177.jpg}) which presumably make use of electrical cables routed throughout the building. After experience such good performance with IndoorAtlas, it was selected as the IPS to move forward with for the Mirrorshades platform.
+Upon closer inspection of the chapel, metal gratings set into the floor and which run along the central aisle, representing much of the horizontal movement in figure \ref{sallies-splodges-red.png} and shown in figure \ref{DSCN0172.jpg} and figure \ref{DSCN0174.jpg} in detail, may explain this pleasingly high performance. These gratings also extend to the open area in front of the altar as shown in figure \ref{DSCN0175.jpg}, however in other areas such as when walking to either side of the altar (far right of figures \ref{sallies-splodges-red.png} and \ref{sallies-indoor-atlas-routes.png}) there were no such obvious sources of magnetic interference (see figure \ref{DSCN0176.jpg}) to account for the maintained accuracy. Less obvious explanations could be possible ferromagnetic properties of the stone used in the building's construction and the presence of electrical lighting and audio systems (loudspeaker and light fixture visible in figure \ref{DSCN0177.jpg}) which presumably make use of electrical cables routed throughout the building. After experiencing such pleasing performance with IndoorAtlas, it was selected as the IPS to move forward with for the Mirrorshades platform.
 
 \begin{figure}[h]
     \begin{center}
@@ -638,7 +638,7 @@ Thanks to the ability of the Unity engine to build applications for myriad platf
 \label{design-considerations-for-rw-vr-transitions}
 Attending to visual stimuli from the RW environment via the cameras when using Mirrorshades is required for the user to safely move around. Delay in IndoorAtlas reporting the user's position and inaccuracies in these position data mean that moving around while attending only to visual stimuli from the VR environment would not be safe for the user, even with unchanging RW obstacles with perfectly accurate representations in the VR environment - which in itself is an unlikely scenario considering a cultural heritage site in which it is extremely likely that many RW obstacles will not have equivalent VR representations. Whilst one can walk through a virtual wall, the same is not true of a real one. Thus the `default' view through the DK1 had to display enough of the view through the cameras for the user to safely navigate their environment, including any obstacles within it (whether these are static objects such as walls and furniture, or dynamic objects such as other humans). For the user to alternatively view through the DK1 a scene that is more, or completely, virtual, thus requires a transition to be performed in which the visual stimuli presented to the user via the DK1 are changed from the default view to the alternative view.
 
-As discussed in section \ref{background-breaks-in-presence}, when a user experiences such a transition from viewing the visual stimuli of one environment (or combination of environments) to viewing the visual stimuli of a different environment (or different combination of environments) this will have an effect upon their sense of presence - a break in presence, as a deflection along the focus of attention axis of the combined Milgram/Waterworth model. These breaks are undesirable, as they stand to make the act of performing a transition between two environments (or combinations of environments) unpleasant, to detract from the fundamental purpose of allowing the user to transition between environments and could even act to deter users from triggering these transitions when they wish to. Implementing these transitions in a manner that minimises the severity of the breaks is integral to the realisation of an enjoyable and useful parallel reality platform for use in cultural heritage.
+As discussed in section \ref{background-breaks-in-presence}, when a user experiences such a transition from viewing the visual stimuli of one environment (or combination of environments) to viewing the visual stimuli of a different environment (or different combination of environments) this will have an effect upon their sense of presence - a break in presence, as a deflection along the focus of attention axis of the combined Milgram/Waterworth model. These breaks are undesirable, as they stand to make the act of performing a transition between two environments (or combinations of environments) unpleasant, to detract from the fundamental purpose of allowing the user to transition between environments and could even act to deter users from triggering these transitions when they wish to. Implementing these transitions in a manner that minimises the severity of the breaks is integral to the realisation of an enjoyable and useful parallel reality platform.
 
 At the conceptual level there are two aspects of these transitions that can be altered and which were expected to affect the severity of the breaks in presence:
 
@@ -796,7 +796,7 @@ The hardware components of the system that were carried by the user comprised:
 	\item An Xbox 360 wireless controller, with USB receiver.
 \end{itemize}
 
-Figure \ref{DSCN0198.jpg} shows an overview of this hardware: the laptop computer is bottom left, the DK1 control box (with USB battery pack, 4-port USB hub and Xbox controller receiver) is bottom right, the DK1 itself (with camera solution attached) is top right, the Xbox controller is top center and the Nexus 5 smartphone is top left. Figure \ref{DSCN0191.jpg} shows a detailed view of the USB battery pack (white, bottom), the DK1 control box (directly above battery), the USB hub (on top, right) and the Xbox controller receiver (top, left). The use of a USB hub allowed there to be only two cables running between the control box bundle and the laptop, which can be seen in figure \ref{DSCN0198.jpg} - the grey cable atop the laptop is the cable from the USB hub and carries the DK1 head tracker information, camera feeds and Xbox controller commands, while the black cable is the HDMI cable that carries visual output from the laptop to the DK1.
+Figure \ref{DSCN0198.jpg} shows an overview of this hardware: the laptop computer is bottom left, the DK1 control box (with USB battery pack, 4-port USB hub and Xbox controller receiver) is bottom right, the DK1 itself (with camera solution attached) is top right, the Xbox controller is top centre and the Nexus 5 smartphone is top left. Figure \ref{DSCN0191.jpg} shows a detailed view of the USB battery pack (white, bottom), the DK1 control box (directly above battery), the USB hub (on top, right) and the Xbox controller receiver (top, left). The use of a USB hub allowed there to be only two cables running between the control box bundle and the laptop, which can be seen in figure \ref{DSCN0198.jpg}: the grey cable atop the laptop is the cable from the USB hub and carries the DK1 head tracker information, camera feeds and Xbox controller commands, while the black cable is the HDMI cable that carries visual output from the laptop to the DK1.
 
 \TwoFig{DSCN0198.jpg}{Hardware of the Mirrorshades platform carried by the user.}{DSCN0198.jpg}
        {DSCN0191.jpg}{Detail of Mirrorshades control box bundle.}{DSCN0191.jpg}
@@ -856,7 +856,7 @@ Testing then took place with members of the Open Virtual Worlds research group (
 %=========================================================================================================
 
 \section{Summary}
-This chapter has recounted the development of the Mirrorshades parallel reality platform, which combines the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allows investigation into the freeform exploration scenario and into aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allows for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisioned of the parallel reality concept but not realised by the VTW platform's modality of interaction. Four different styles of transition between real and virtual stimuli were implemented and their expected user experience illustrated using the combined Milgram/Waterworth model.
+This chapter has recounted the development of the Mirrorshades parallel reality platform, which combined the Oculus Rift DK1 VR HMD with the IndoorAtlas IPS. The greater positional accuracy of the IPS compared to the GPS solution used within the VTW project allowed investigation into the full freeform exploration scenario and into aspects of the detailed comparison scenario. The immersive nature of the DK1, completely filling the user's FOV with mediated stereoscopic visuals, allowed for investigation of the experiential aspect of switching wholly between complete and discrete real and virtual environments that was originally envisioned of the parallel reality concept but not realised by the VTW platform's modality of interaction. Four different styles of transition between real and virtual stimuli were implemented and their expected user experience, in terms of the extended vacancy problem, has been illustrated using the combined Milgram/Waterworth model.
 
 Latency measurements of the video see-through solution were performed and while higher than published best practices for VR experiences they were not expected to be as detrimental to user experience in the style of interaction envisioned of the platform as they would be in more traditional VR gaming scenarios. Initial testing of the platform was conducted, first within a department building and then within St Salvator's chapel, which was introduced as an ideal real world location at which to perform a user study of the Mirrorshades platform within the field of virtual heritage.
 
